--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
           </div>
           <div class="form__card__top">
             <form class="form" action="">
-              <input class="username" type="text" />
-              <input class="password" type="password" />
+              <input value="atuny0" class="username" type="text" />
+              <input value="9uQFF1Lh" class="password" type="password" />
               <button class="formBtn">Login</button>
             </form>
           </div>
