--- a/pages/products.html
+++ b/pages/products.html
@@ -51,7 +51,7 @@
         </button>
         <div>
           <li class="header__item">
-            <button class="loginBtn">Login Out</button>
+            <button class="loginBtn">Login</button>
           </li>
         </div>
       </nav>
