--- a/index.html
+++ b/index.html
@@ -65,9 +65,16 @@
           </div>
           <div class="form__card__top">
             <form class="form" action="">
-              <input value="atuny0" class="username" type="text" />
-              <input value="9uQFF1Lh" class="password" type="password" />
-              <button class="formBtn">Login</button>
+              <input required value="atuny0" class="username" type="text" />
+              <input
+                required
+                value="9uQFF1Lh"
+                class="password"
+                type="password"
+              />
+              <div class="form__btns">
+                <button type="submit" class="formBtn">Login</button>
+              </div>
             </form>
           </div>
 
@@ -89,6 +96,7 @@
             </form>
           </div>
         </div>
+
         <button class="seeMoreBtn">See more</button>
       </section>
     </main>
