--- a/index.html
+++ b/index.html
@@ -56,8 +56,9 @@
     </header>
 
     <main>
-      <section class="products container">
+      <section class="products container" id="hero">
         <div class="products__cards"></div>
+        <div class="loading"></div>
         <div class="form__card">
           <div class="form__card__info">
             <button type="submit" class="login__btn">Login</button>
