--- a/pages/admin.html
+++ b/pages/admin.html
@@ -23,7 +23,9 @@
     <header class="header">
       <nav class="header__navbar container df">
         <div class="header__logo">
-          <a href="#"><img src="../images/home/logo.svg" alt="" /></a>
+          <a href="../index.html"
+            ><img src="../images/home/logo.svg" alt=""
+          /></a>
         </div>
         <ul class="header__list df">
           <li class="header__item">
